--- a/#src/scss/blocks/_timer.scss
+++ b/#src/scss/blocks/_timer.scss
@@ -74,6 +74,7 @@
       transition: all .3s ease-in-out;
       margin: 0 7px;
       background: $white;
+      overflow: hidden;
 
       @media(any-hover: hover){
          &:hover{
@@ -96,6 +97,27 @@
    height: 160px;
    display: flex;
    overflow: hidden;
+   position: relative;
+
+   &:before{
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 20px;
+      background: rgba($blue, .1);
+      top: 0;
+      left: 0;
+   }
+
+   &:after{
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 20px;
+      background: rgba($blue, .1);
+      bottom: 0;
+      left: 0;
+   }
 
    &__number {
       height: 100%;
