--- a/timer/css/style.css
+++ b/timer/css/style.css
@@ -310,6 +310,7 @@ h6 {
   transition: all 0.3s ease-in-out;
   margin: 0 7px;
   background: #fff;
+  overflow: hidden;
 }
 
 .item-timer {
@@ -322,6 +323,27 @@ h6 {
   display: -ms-flexbox;
   display: flex;
   overflow: hidden;
+  position: relative;
+}
+
+.item-timer:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 20px;
+  background: rgba(100, 199, 255, 0.1);
+  top: 0;
+  left: 0;
+}
+
+.item-timer:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 20px;
+  background: rgba(100, 199, 255, 0.1);
+  bottom: 0;
+  left: 0;
 }
 
 .item-timer__number {
